Revert "stopped ignoring content"
This reverts commit e134434e09668c52c59e9453b09267c53c14a874.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 sw/jetty/logs
 sw/jetty/temp
 webapps/openrdf-sesame/app_dir
+webapps/ROOT/content
 webapps/ROOT/WEB-INF/logs
 webapps/solr/data
 docs/build
