--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 sw/jetty/logs
 sw/jetty/temp
 webapps/openrdf-sesame/app_dir
-webapps/ROOT/content
+webapps/ROOT/content/xml/tei/corpus
 webapps/ROOT/WEB-INF/logs
 webapps/solr/data
 docs/build
